<resources>
    <string name="permission_hint" translatable="false">系统检测到相关权限被拒绝，是否立即开启权限？</string>
    <string name="title_activity_launch" translatable="false">LaunchActivity</string>
    <string name="title_activity_base" translatable="false">BaseActivity</string>
    <string name="app_name" translatable="false">外业采集</string>
    <string name="handWrite" translatable="false">手写</string>
    <string name="shiyitu" translatable="false">示意图</string>
    <string name="soundRecording" translatable="false">录\u3000音</string>
    <string name="filmRecording" translatable="false">录\u3000像</string>
    <string name="takePhoto" translatable="false">拍\u3000照</string>
    <string name="start" translatable="false">开始</string>
    <string name="stop" translatable="false">停止</string>
    <string name="pause" translatable="false">暂停</string>
    <string name="finish" translatable="false">完成</string>
    <string name="imagedescription" translatable="false">image</string>
    <string name="leftCount" translatable="false">剩余使用次数：</string>
    <string name="version" translatable="false">V1.0@2017公路规划设计院有限公司版权所有</string>
    <string name="deviceCode" translatable="false">设备码</string>
    <string name="serializeNumber" translatable="false">序列号</string>
    <string name="inputSerializeNumber" translatable="false">请输入序列号</string>
    <string name="usageCount" translatable="false">使用次数</string>
    <string name="confirm" translatable="false">确   定</string>
    <string name="quit" translatable="false">退  出</string>
    <string name="delete" translatable="false">删    除</string>
    <string name="cancle" translatable="false">取  消</string>
    <string name="copy" translatable="false">(按压设备码可复制)</string>
    <string name="notice_title" translatable="false">您好，当前APP还未注册，您可通过下列步骤完成APP注册。</string>
    <string name="notices" translatable="false">(1)请您将下方显示的设备码（注：区分大小写）发送给管理员。\n(2)管理员分配注册用的序列号（注：区分大小写）后，再将序列号发送给您。\n(3)您将序列号填入到下方的序列号输入框中，点击确定即完成注册。</string>
    <string name="notice" translatable="false">您好，当前APP还未注册，您可通过下列步骤完成APP注册。\n1）请您将下方显示的设备码（注：区别大小写）发送给管理员。\n2）管理员分配注册用的序列号（注：区分大小写）后，再将序列号发送给您。\n3）您将序列号填到下方的序列号输入框中，点击确定即完成注册。</string>
    <string name="selectProject" translatable="false">请选择项目</string>
    <string name="search" translatable="false">搜   索</string>
    <string name="inputProjectName" translatable="false">请输入项目名称</string>
    <string name="confrimDeletePicture" translatable="false">确定删除该图片吗？</string>
    <string name="addProject" translatable="false">编辑/新增项目</string>
    <string name="number" translatable="false">编号：</string>
    <string name="grade" translatable="false">等级：</string>
    <string name="count" translatable="false">记录簿数量：</string>
    <string name="createDate" translatable="false">创建日期：</string>
    <string name="createTime" translatable="false">创建时间</string>
    <string name="updateDate" translatable="false">更新日期：</string>
    <string name="updateTime" translatable="false">更新时间</string>
    <string name="update" translatable="false">最近更新：</string>
    <string name="projectName" translatable="false">名称：</string>
    <string name="projectId" translatable="false">编号：</string>
    <string name="qianzhui" translatable="false">桩号前缀：</string>
    <string name="projectGrade" translatable="false">等级：</string>
    <string name="unchoose" translatable="false">未选择</string>
    <string name="inputProjectId" translatable="false">请输入项目编号</string>
    <string name="noticeDelect" translatable="false">删除此项目，将删除此项目以及其关联的所有记录簿数据，确定删除此项目？</string>
    <string name="selectMajor" translatable="false">请选择专业</string>
    <string name="majorClassification" translatable="false">勘察专业分类</string>
    <string name="exportProject" translatable="false">导出项目</string>
    <string name="importProject" translatable="false">导入项目</string>
    <string name="projectInformation" translatable="false">项目基本信息</string>
    <string name="projectRecord" translatable="false">项目调查记录</string>
    <string name="roadbed" translatable="false">路基专业\n(27)</string>
    <string name="interflow" translatable="false">互通专业</string>
    <string name="bridge" translatable="false">桥涵专业</string>
    <string name="tunnel" translatable="false">隧道专业</string>
    <string name="dangtuqiang" translatable="false">挡土墙设计</string>
    <string name="quqitu" translatable="false">取（弃）土场</string>
    <string name="shenluqian" translatable="false">深路堑、高填路基</string>
    <string name="yanxianpaishui" translatable="false">沿线排水系统</string>
    <string name="yanxianzhulu" translatable="false">沿线筑路材料料场情况</string>
    <string name="yanxianzongti" translatable="false">沿线总体情况</string>
    <string name="qitagongcheng" translatable="false">其他工程</string>
    <string name="hutongshi" translatable="false">互通式立交</string>
    <string name="fenlishi" translatable="false">分离式立交、通道、天桥</string>
    <string name="dazhong" translatable="false">大、中桥</string>
    <string name="xiaoqiao" translatable="false">小桥涵</string>
    <string name="jiyouqiaohan" translatable="false">既有桥涵</string>
    <string name="suidaogongcheng" translatable="false">隧道工程</string>
    <string name="directorySettings" translatable="false">导出目录设置：</string>
    <string name="selectImportDir" translatable="false">选择你导入文件：</string>
    <string name="exporting" translatable="false">正在导出……</string>
    <string name="export" translatable="false">导出</string>
    <string name="import1" translatable="false">导入</string>
    <string name="selectRecordBook" translatable="false">请选择记录簿</string>
    <string name="selectRoadbedBook" translatable="false">请选择路基专业调查记录簿类型</string>
    <string name="selectInterflowBook" translatable="false">请选择互通专业调查记录簿类型</string>
    <string name="selectBridgeBook" translatable="false">请选择桥涵专业调查记录簿类型</string>
    <string name="selectTunnelBook" translatable="false">请选择隧道专业调查记录簿类型</string>
    <string name="dangtuqiangBook" translatable="false">挡土墙设计外业调查记录簿</string>
    <string name="quqituBook" translatable="false">取（弃）土场外业调查记录簿</string>
    <string name="shenluqianBook" translatable="false">深路堑、高填路基外业调查记录簿</string>
    <string name="yanxianpaishuiBook" translatable="false">沿线排水系统外业调查记录簿</string>
    <string name="yanxianzhuluBook" translatable="false">沿线筑路材料料场情况外业调查记录簿</string>
    <string name="yanxianzongtiBook" translatable="false">沿线总体情况外业调查记录簿</string>
    <string name="qitagongchengBook" translatable="false">其他工程外业调查记录簿</string>
    <string name="hutongshiBook" translatable="false">互通式立交外业调查记录簿</string>
    <string name="fenlishiBook" translatable="false">分离式立交、通道、天桥外业调查记录簿\n(7)</string>
    <string name="dazhongBook" translatable="false">大、中桥外业调查记录簿\n(7)</string>
    <string name="xiaoqiaoBook" translatable="false">小桥涵外业调查记录簿\n(7)</string>
    <string name="jiyouqiaohanBook" translatable="false">既有桥涵外业调查记录簿\n(7)</string>
    <string name="suidaogongchengBook" translatable="false">隧道工程外业调查记录簿</string>
    <string name="selectdangtuqiangBook" translatable="false">请选择路基专业【挡土墙设计】外业调查记录簿</string>
    <string name="selectquqituBook" translatable="false">请选择路基专业【取（弃）土场】外业调查记录簿</string>
    <string name="selectshenluqianBook" translatable="false">请选择路基专业【深路堑、高填路基】外业调查记录簿</string>
    <string name="selectyanxianpaishuiBook" translatable="false">请选择路基专业【沿线排水系统】外业调查记录簿</string>
    <string name="selectyanxianzhuluBook" translatable="false">请选择路基专业【沿线筑路材料料场情况】外业调查记录簿</string>
    <string name="selectyanxianzongtiBook" translatable="false">请选择路基专业【沿线总体情况】外业调查记录簿</string>
    <string name="selectqitagongchengBook" translatable="false">请选择路基专业【其他工程外业】调查记录簿</string>
    <string name="selecthutongshiBook" translatable="false">请选择互通专业【互通式立交】外业调查记录簿</string>
    <string name="selectfenlishiBook" translatable="false">请选择桥涵专业【分离式立交.通道.天桥】外业调查记录簿</string>
    <string name="selectdazhongBook" translatable="false">请选择桥涵专业【大、中桥】外业调查记录簿</string>
    <string name="selectxiaoqiaoBook" translatable="false">请选择桥涵专业【小桥涵】外业调查记录簿</string>
    <string name="selectjiyouqiaohanBook" translatable="false">请选择桥涵专业【既有桥涵】外业调查记录簿</string>
    <string name="selectsuidaogongchengBook" translatable="false">请选择隧道专业【隧道工程】外业调查记录簿</string>
    <string name="selectIndustrySurveyRecordBook" translatable="false">选择外业调查记录簿</string>
    <string name="crossPileNumber" translatable="false">交叉桩号</string>
    <string name="writedangtuqiangBook" translatable="false">请填写挡土墙设计外业调查记录</string>
    <string name="writequqituBook" translatable="false">请填写取（弃）土场外业调查记录</string>
    <string name="writeshenluqianBook" translatable="false">请填写深路堑、高填路基外业调查记录</string>
    <string name="writeyanxianpaishuiBook" translatable="false">请填写沿线排水系统外业调查记录</string>
    <string name="writeyanxianzhuluBook" translatable="false">请填写沿线筑路材料料场情况外业调查记录</string>
    <string name="writeyanxianzongtiBook" translatable="false">请填写沿线总体情况外业调查记录</string>
    <string name="writeqitagongchengBook" translatable="false">请填写其他工程外业调查记录</string>
    <string name="writehutongshiBook" translatable="false">请填写互通式立交外业调查记录</string>
    <string name="writefenlishiBook" translatable="false">请填写分离式立交.通道.天桥外业调查记录</string>
    <string name="writedazhongBook" translatable="false">请填写大、中桥外业调查记录</string>
    <string name="writexiaoqiaoBook" translatable="false">请填写小桥涵外业调查记录</string>
    <string name="writejiyouqiaohanBook" translatable="false">请填写既有桥涵外业调查记录</string>
    <string name="writesuidaogongchengBook" translatable="false">请填写隧道工程外业调查记录</string>
    <string name="surveyroadbed" translatable="false">勘察路基专业</string>
    <string name="surveyinterflow" translatable="false">勘察互通专业</string>
    <string name="surveybridge" translatable="false">勘察桥涵专业</string>
    <string name="surveytunnel" translatable="false">勘察隧道专业</string>
    <string name="dangtuqiangBookform" translatable="false">挡土墙设计外业调查记录表</string>
    <string name="quqituform" translatable="false">取（弃）土场外业调查记录表</string>
    <string name="shenluqianform" translatable="false">深路堑、高填路基外业调查记录表</string>
    <string name="yanxianpaishuiform" translatable="false">沿线排水系统外业调查记录表</string>
    <string name="yanxianzhuluform" translatable="false">沿线筑路材料料场情况外业调查记录表</string>
    <string name="yanxianzongtiform" translatable="false">沿线总体情况外业调查记录表</string>
    <string name="qitagongchengform" translatable="false">其他工程外业调查记录表</string>
    <string name="hutongshiform" translatable="false">互通式立交外业调查记录表</string>
    <string name="fenlishiform" translatable="false">分离式立交、通道、天桥外业调查记录表</string>
    <string name="dazhongform" translatable="false">大、中桥外业调查记录表</string>
    <string name="xiaoqiaoform" translatable="false">小桥涵外业调查记录表</string>
    <string name="jiyouqiaohanform" translatable="false">既有桥涵外业调查记录表</string>
    <string name="suidaogongchengform" translatable="false">隧道工程外业调查记录表</string>
    <string name="date" translatable="false">日期：</string>
    <string name="weather" translatable="false">天气：</string>
    <string name="structureType" translatable="false">结构物类型：</string>
    <string name="crossRoadType" translatable="false">被交叉道路类型</string>
    <string name="crossAngle" translatable="false">交叉角度(度)</string>
    <string name="crossRoadGrade" translatable="false">被交叉道路等级</string>
    <string name="currentSituation" translatable="false">现状:</string>
    <string name="planning" translatable="false">规划:</string>
    <string name="baseWidth" translatable="false">被交叉道路基宽度(m)</string>
    <string name="headroom" translatable="false">被交叉道路净空(m)</string>
    <string name="mainlineCrossover" translatable="false">主线交叉方式</string>
    <string name="designHeight" translatable="false">交叉处主线设计高(m)</string>
    <string name="centralCoordinate" translatable="false">被交道中心标高(m)</string>
    <string name="holeNumber" translatable="false">桥梁初拟孔数*孔径(m)</string>
    <string name="inputText" translatable="false">输入文本</string>
    <string name="showDiagrammaticSketch" translatable="false">示意图在此位置显示</string>
    <string name="gaiyiqingkuangjieshao" translatable="false">改移工程项目情况介绍：</string>
    <string name="gaiyipingmianshiyi" translatable="false">改移工程项目平面示意图：</string>
    <string name="gaiyihengduanmianshiyi" translatable="false">改移工程（路、沟）横断面示意：</string>
</resources>