<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dimen_10_dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_f1_dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dimen_8_dp"
        android:paddingTop="@dimen/dimen_5_dp"
        android:paddingRight="@dimen/dimen_8_dp"
        android:paddingBottom="@dimen/dimen_5_dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="改移工程项目："
            android:textColor="@color/textColor"
            android:textStyle="bold" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"></LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_f1_dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimen_8_dp"
        android:paddingTop="@dimen/dimen_10_dp"
        android:paddingRight="@dimen/dimen_8_dp"
        android:paddingBottom="@dimen/dimen_15_dp">

        <com.huejie.osmdroid.view.AllShowListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dividerHeight="@dimen/dimen_5_dp"
            android:divider="@null"
            android:scrollbars="none"></com.huejie.osmdroid.view.AllShowListView>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="添加" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15_dp"
        android:text="@string/gaiyiqingkuangjieshao"
        android:textColor="@color/tect_color"
        android:textSize="@dimen/text_size_14_sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_situationDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15_dp"
        android:background="@drawable/shape_input_bg_white"
        android:gravity="left|top"
        android:hint="@string/inputText"
        android:maxLength="256"
        android:maxLines="3"
        android:minHeight="@dimen/dimen_100_dp"
        android:padding="@dimen/dimen_15_dp"
        android:textColor="@color/delect_color"
        android:textSize="@dimen/text_size_14_sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15_dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gaiyipingmianshiyi"
                android:textColor="@color/tect_color"
                android:textSize="@dimen/text_size_14_sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_dt_load_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20_dp"
                android:padding="@dimen/dimen_10_dp"
                android:src="@mipmap/load_file" />

            <ImageView
                android:id="@+id/iv_dt_add_shiyitu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:padding="@dimen/dimen_10_dp"
                android:src="@mipmap/add_shiyitu" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200_dp">

            <ImageView
                android:id="@+id/iv_pm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center" />

            <TextView
                android:id="@+id/tv_pm_syt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dimen_20_dp"
                android:text="@string/showDiagrammaticSketch"
                android:textColor="@color/delect_color"
                android:textSize="@dimen/text_size_14_sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15_dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gaiyihengduanmianshiyi"
                android:textColor="@color/tect_color"
                android:textSize="@dimen/text_size_14_sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iv_pm_load_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_20_dp"
                android:padding="@dimen/dimen_10_dp"
                android:src="@mipmap/load_file" />

            <ImageView
                android:id="@+id/iv_pm_add_shiyitu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10_dp"
                android:padding="@dimen/dimen_10_dp"
                android:src="@mipmap/add_shiyitu" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200_dp">

            <ImageView
                android:id="@+id/iv_hdm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center" />

            <TextView
                android:id="@+id/tv_dt_syt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dimen_20_dp"
                android:text="@string/showDiagrammaticSketch"
                android:textColor="@color/delect_color"
                android:textSize="@dimen/text_size_14_sp" />
        </RelativeLayout>


    </LinearLayout>
</LinearLayout>
